[gd_scene load_steps=8 format=3 uid="uid://c5r12eiuicmwe"]

[ext_resource type="Script" uid="uid://cyp4cxq4pd8mp" path="res://scenes/game_controller/game_controller.gd" id="1_420aq"]
[ext_resource type="PackedScene" uid="uid://dmffvcp46qm84" path="res://scenes/levels/main_level.tscn" id="1_hiwhh"]
[ext_resource type="Script" uid="uid://7ra8pklsr60m" path="res://scenes/game_controller/level_manager.gd" id="2_gupwa"]
[ext_resource type="PackedScene" uid="uid://cic7i7x8bsqd4" path="res://scenes/flappy_disk/flappy_disk.tscn" id="3_c3f1a"]
[ext_resource type="Script" uid="uid://dthp2ocotlhmg" path="res://scenes/game_controller/player_character_manager.gd" id="4_giy5l"]
[ext_resource type="Script" uid="uid://bnnt1xk23lgje" path="res://scenes/game_controller/ui_manager.gd" id="6_c4mfo"]
[ext_resource type="PackedScene" uid="uid://bb0c0pf52ia57" path="res://scenes/ui/score/score_ui.tscn" id="7_mras5"]

[node name="GameController" type="Node"]
script = ExtResource("1_420aq")

[node name="LevelManager" type="Node2D" parent="."]
script = ExtResource("2_gupwa")

[node name="MainLevel" parent="LevelManager" instance=ExtResource("1_hiwhh")]

[node name="PlayerCharacterManager" type="Node2D" parent="."]
script = ExtResource("4_giy5l")

[node name="FlappyDisk" parent="PlayerCharacterManager" instance=ExtResource("3_c3f1a")]

[node name="UiManager" type="CanvasLayer" parent="."]
script = ExtResource("6_c4mfo")

[node name="Score UI" parent="UiManager" instance=ExtResource("7_mras5")]
